# rkill

./: .clang-tidy  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.BE557B484108F0A1.idx
.github/workflows/: clang-tidy.yml
src/: main.cpp
